# Hackaton_2022_GoodBarber

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/backend/: file.txt  main.py
backend/backend/routes/: route.py
backend/backend/schemas/: articles.py  categories.py  questions.py  schema.py
backend/backend/services/: OpenAI.py  Questions.py
backend/backend/services/template/: index.html  index.html.bak  template.html
backend/backend/services/template/css/: tooplate-style.css
backend/backend/services/template/text/: generateByIA.txt  message.txt
docker/sql/: 1.schemas.sql  2.insert.sql
frontend/: package-lock.json  package.json
frontend/frontend/: README.md  package-lock.json  package.json  quasar.config.js
frontend/frontend/src/css/: quasar.variables.scss
frontend/frontend/src/layouts/: MainLayout.vue
frontend/frontend/src/pages/: IndexPage.vue
template/: index.html
template/css/: tooplate-style.css
template/text/: generateByIA.txt  message.txt
